@@ -1,4 +1,4 @@
-# $NetBSD: pgsql.buildlink3.mk,v 1.28 2010/02/10 19:33:54 joerg Exp $
+# $NetBSD: pgsql.buildlink3.mk,v 1.29 2010/09/21 08:06:09 adam Exp $
 #
 # User-settable variables:
 #
@@ -26,7 +26,7 @@ _SYS_VARS.pgsql=	PG_LIB_EXT PGSQL_TYPE PGPKGSRCDIR
 .include "../../mk/bsd.prefs.mk"
 
 PGSQL_VERSION_DEFAULT?=		84
-PGSQL_VERSIONS_ACCEPTED?=	84 83 82
+PGSQL_VERSIONS_ACCEPTED?=	90 84 83 82
 
 # transform the list into individual variables
 .for pv in ${PGSQL_VERSIONS_ACCEPTED}
@@ -41,6 +41,9 @@ PG_LIB_EXT=so
 
 # check what is installed
 .if ${OPSYS} == "Darwin"
+.if exists(${LOCALBASE}/lib/libecpg.6.0.2.dylib)
+_PGSQL_VERSION_90_INSTALLED=	yes
+.endif
 .if exists(${LOCALBASE}/lib/libecpg.6.0.1.dylib)
 _PGSQL_VERSION_84_INSTALLED=	yes
 .endif
@@ -51,6 +54,9 @@ _PGSQL_VERSION_83_INSTALLED=	yes
 _PGSQL_VERSION_82_INSTALLED=	yes
 .endif
 .else
+.if exists(${LOCALBASE}/lib/libecpg.so.6.0.2)
+_PGSQL_VERSION_90_INSTALLED=	yes
+.endif
 .if exists(${LOCALBASE}/lib/libecpg.so.6.0.1)
 _PGSQL_VERSION_84_INSTALLED=	yes
 .endif
@@ -99,7 +105,10 @@ _PGSQL_VERSION=	${_PGSQL_VERSION_FIRSTACCEPTED}
 #
 # set variables for the version we decided to use:
 #
-.if ${_PGSQL_VERSION} == "84"
+.if ${_PGSQL_VERSION} == "90"
+PGSQL_TYPE=	postgresql90-client
+PGPKGSRCDIR=	../../databases/postgresql90-client
+.elif ${_PGSQL_VERSION} == "84"
 PGSQL_TYPE=	postgresql84-client
 PGPKGSRCDIR=	../../databases/postgresql84-client
 .elif ${_PGSQL_VERSION} == "83"
